fix experience layout on mobile devices

--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -1,42 +1,42 @@
 .experience__container {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 2rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 2rem;
 }
 
-.experience__container > div {
-  background: var(--color-bg-variant);
-  padding: 2.4rem 2rem;
-  border-radius: 2rem;
-  border: 1px solid transparent;
-  transition: var(--transition);
+.experience__container>div {
+    background: var(--color-bg-variant);
+    padding: 2.4rem 2rem;
+    border-radius: 2rem;
+    border: 1px solid transparent;
+    transition: var(--transition);
 }
 
-.experience__container > div:hover {
-  background: transparent;
-  border-color: var(--color-primary-variant);
-  cursor: default;
+.experience__container>div:hover {
+    background: transparent;
+    border-color: var(--color-primary-variant);
+    cursor: default;
 }
 
-.experience__container > div h3 {
-  text-align: center;
-  margin-bottom: 2rem;
-  color: var(--color-primary);
+.experience__container>div h3 {
+    text-align: center;
+    margin-bottom: 2rem;
+    color: var(--color-primary);
 }
 
 .experience__content {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  row-gap: 2rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    row-gap: 2rem;
 }
 
 .experience__details {
-  display: flex;
-  gap: 1rem;
+    display: flex;
+    gap: 1rem;
 }
 
 #icon {
-  font-size: 1.6rem;
+    font-size: 1.6rem;
     margin-top: 6px;
     color: var(--color-primary)
 }
@@ -50,7 +50,7 @@
         grid-template-columns: 1fr;
     }
 
-    .experience__container > div {
+    .experience__container>div {
         width: 80%;
         padding: 2rem;
         margin: 0 auto;
@@ -60,23 +60,35 @@
         /* padding: 1rem; */
         column-gap: 1rem;
     }
+
     #icon {
         font-size: 2rem;
     }
 }
-   /* ======================= MEDIA QUERIES (SMALL  DEVICES) =================== */
-   @media screen and (max-width: 600px) {
+
+/* ======================= MEDIA QUERIES (SMALL  DEVICES) =================== */
+@media screen and (max-width: 600px) {
 
     .experience__container {
         gap: 1rem;
     }
-    .experience__container > div {
+
+    .experience__container>div {
         width: 100%;
         padding: 2rem 0rem;
     }
 
-    #icon {
-      font-size: 1rem;
-  }
+
+    .experience__details {
+        display: flex;
+        column-gap: 0.7rem;
+        margin-left: 1rem;
+    }
     
-     }
+    #icon {
+        font-size: 1.5rem;
+        margin-top: 6px;
+        color: var(--color-primary)
+    }
+
+}
