--- a/src/components/progress/progress.css
+++ b/src/components/progress/progress.css
@@ -2,7 +2,7 @@
   background-color: #d8d8d8;
   border-radius: 20px;
   height: 20px;
-  width: 130px;
+  width: 120px;
 }
 
 .progress-done {
